--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ div, section, header, footer, p, h1, h2, h3 {
     box-sizing: border-box;
 }
 
+img {
+    width: 100%;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -20,8 +24,9 @@ html, body {
     padding: 0 1rem;
 }
 
-header {
-    font-weight: 700;
+#main-header h1{
+    font-weight: 900;
+    text-align: center;
 }
 
 .section {
@@ -34,39 +39,54 @@ header {
     justify-content: center;
 }
 
-.img-container {
-    width: 100%;
-}
-
-img {
-    width: 100%;
-    display: block;
-
-}
-
 #main-title {
     transform: translate(50%, 50%);
     top: 50%;
     left: 50%;
     font-weight: 800;
     position: absolute;
+    display: inline-block;
+    cursor: default;
 }
 
 #main-title span {
-    color: #fff;
+    color: rgba(255, 255, 255, 0.3);
     font-size: 7rem;
+    transition: 0.8s;
 }
+
+#main-title span:hover {
+    color: #fff;
+    font-size: 10rem;
+}
+
+#seoul:hover section > .img-container{
+    background-image: url(../img/photo-1578037571214-25e07ed4a487.avif);
+}
+
+.img-container {
+    width: 100%;
+    height: max-content;
+}
+
+#mainImage {
+    width: 100%;
+    display: block;
+}
+
 
 .main-module-container {
     margin: 6vw 0 2vw;
 }
 
 #headline {
-    font-size: 2rem;
+    font-weight: 800;
+    font-size: 2.5rem;
 }
 
 .card-wrapper {
     display: flex;
+    /* 요소 사이 간격 맞춤 (양 끝 무시)*/
     justify-content: space-between;
 }
 
@@ -75,14 +95,37 @@ img {
     height: 500px;
     justify-content: space-around;
     padding: 32px 24px;
-    background-color: bisque;
+    /* background-color: bisque; */
     border-radius: 16px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    box-shadow: inset 10px rgba(0, 0, 0, 0.8);
+}
+
+#card-seoul {
+    background-image: url('../img/photo-1597548898542-78eeb7bfaf40.avif');
+}
+#card-gyeonggi {
+    background-image: url('../img/photo-1569225148599-aa8dca351c37.avif');
+}
+#card-sokcho {
+    background-image: url('../img/photo-1660782558359-652078942ad1.avif');
+}
+#card-busan {
+    background-image: url('../img/photo-1601561831532-6870badf3e29.avif');
 }
 
 .main-city-card-title {
     /*텍스트 default 여백 없앰*/
     margin: 0 0 8px; 
     font-size: 2rem ;
+    font-weight: 700;
+    color: #fff;
+}
+
+.main-city-card-desc {
+    font-size: 1.2rem;
+    color: #fff;
 }
 
 #subtitle {
