--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,8 @@ html, body {
     color: #fff;
 }
 
-#subtitle {
-    font-size: 2rem;
+footer {
+    width: 100%;
+    height: 400px;
+    border-top: #cecece 1px solid;
 }
