Refactor: 리스트 '명소', '별점' 텍스트 삭제

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,10 @@ html, body {
     color: #fff;
 }
 
+.auction-row {
+    background-color: aquamarine;
+}
+
 footer {
     width: 100%;
     height: 400px;
