--- a/css/style.css
+++ b/css/style.css
@@ -134,16 +134,16 @@ html, body {
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
-#card-seoul {
+#cardSeoul {
     background-image: url('../img/photo-1597548898542-78eeb7bfaf40.avif');
 }
-#card-gyeonggi {
+#cardGyeonggi {
     background-image: url('../img/photo-1569225148599-aa8dca351c37.avif');
 }
-#card-sokcho {
+#cardSokcho {
     background-image: url('../img/photo-1660782558359-652078942ad1.avif');
 }
-#card-busan {
+#cardBusan {
     background-image: url('../img/photo-1601561831532-6870badf3e29.avif');
 }
 
@@ -169,7 +169,7 @@ html, body {
     width: 60vw;
     /* ::marker 없앰 */
     list-style: none;
-    border-top: solid 1px #cecece;
+    border-bottom: solid 1px #cecece;
 }
 
 .auctionID, .auctionAddress {
@@ -178,7 +178,7 @@ html, body {
 
 .auctionID {
     font-size: 1.2rem;
-    font-weight: bold;
+    /*font-weight: bold;*/
     margin: 15px 0 10px;
 }
 
@@ -186,8 +186,38 @@ html, body {
     margin: 0 0 10px;
 }
 
+.tag-container {
+    display: flex;
+}
+
+.tag {
+    width: 75px;
+    height: 40px; /* 16 x 2.5(rem) = 40 */
+    margin: 0 5px 0;
+    background-color: #DCE3E8;
+    border-radius: 40px;
+    position: relative;
+    appearance: none;
+    cursor: pointer;
+}
+
+/*.tag:checked {*/
+/*    background-color: #186ADE;*/
+/*}*/
+
+.tag-name {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
 footer {
     width: 100%;
     height: 400px;
     border-top: #cecece 1px solid;
+}
+
+#seoul:hover, #mainImage {
+    background-image: url('../img/photo-1601561831532-6870badf3e29.avif');
 }
