--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,9 @@
     --color-white: #fff;
 }
 
-div, section, header, footer, p, h1, h2, h3 {       
-    box-sizing: border-box;
-}
+div, section, header, footer, p, h1, h2, h3 { box-sizing: border-box; }
 
-img {
-    width: 100%;
-}
+img { width: 100%; }
 
 html, body {
     margin: 0;
@@ -20,6 +16,7 @@ html, body {
     width: 100%;
     height: 100vh;
     font-size: 16px;
+    background-color: #f5f5f7;
 }
 
 #logo{
@@ -98,14 +95,12 @@ html, body {
     padding: 0 1rem;
 }
 
-.main-module-container {
-    margin: 6vw 0 2vw;
-}
+.main-module-container { margin: 6vw 0 2vw; }
 
 .headline {
     margin: 50px 0 30px;
     font-weight: 800;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 
 .card-wrapper {
@@ -164,6 +159,13 @@ html, body {
     width: max-content;
 }
 
+#listElement {
+    background-color: #fff;
+    border-radius: 1rem;
+    padding: 12px 30px;
+    border: 0.0625rem solid #D7E2EB;
+}
+
 .auction-row {
     cursor: pointer;
     width: 60vw;
@@ -171,24 +173,22 @@ html, body {
     list-style: none;
     border-bottom: solid 1px #cecece;
 }
+.auction-row:nth-last-child(1) { border: none; }
 
-.auctionID, .auctionAddress {
-    margin: 0;
-}
+.auctionID, .auctionAddress { margin: 0; }
 
 .auctionID {
     font-size: 1.2rem;
     /*font-weight: bold;*/
-    margin: 15px 0 10px;
+    margin: 15px 0 5px;
 }
 
 .auctionAddress {
     margin: 0 0 10px;
+    font-size: 1rem;
 }
 
-.tag-container {
-    display: flex;
-}
+.tag-container { display: flex; }
 
 .tag {
     width: 75px;
@@ -200,10 +200,6 @@ html, body {
     appearance: none;
     cursor: pointer;
 }
-
-/*.tag:checked {*/
-/*    background-color: #186ADE;*/
-/*}*/
 
 .tag-name {
     position: absolute;
@@ -218,6 +214,23 @@ footer {
     border-top: #cecece 1px solid;
 }
 
-#seoul:hover, #mainImage {
-    background-image: url('../img/photo-1601561831532-6870badf3e29.avif');
+.sort-by {
+    justify-content: flex-end;
+    /* 오른쪽 정렬 */
+    margin: auto 0 0 auto;
+}
+
+select {
+    height: 40px;
+
+    font-size: 1rem;
+    color: #444;
+    background-color: #fff;
+
+    padding: 0.6em 1.4em 0.5em 0.8em;
+    margin: 0;
+
+    border: 1px solid #aaa;
+    border-radius: 2rem;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
 }
