--- a/css/style.css
+++ b/css/style.css
@@ -187,12 +187,14 @@ header {
 .auctionID {
     font-size: 1.2rem;
     /*font-weight: bold;*/
-    margin: 15px 0 5px;
+    margin: 16px 0 5px;
 }
 
 .auctionAddress {
-    margin: 0 0 10px;
-    font-size: 1rem;
+    margin: 0 0 12px;
+    font-size: .9em;
+    color: #808080;
+    font-weight: 300;
 }
 
 .tag-container { display: flex; }
@@ -230,7 +232,7 @@ footer {
 select {
     height: 40px;
 
-    font-size: 1rem;
+    font-size: .9rem;
     color: #444;
     background-color: #fff;
 
